core/components/com_members/site/assets/css/members.css
/* ... */
/* Menu */ 
	#page_menu {
		list-style: none;
		margin: 0;
		padding: 0;
	}
	#page_menu li {
		position: relative;
		margin: 0;
		padding: 0;
		border-bottom: 1px solid #eee;
		border-bottom: 1px solid rgba(255, 255, 255, 0.6);
	}
	#page_menu li:first-child {
		border-top: 1px solid #eee;
	} 
	#page_menu li a {
		color: #aaa;
		position: relative;
		display: block;
		background-image: none;
		padding: 0.4em 2em 0.4em 3.5em;
		border: none;
	}
	#page_menu li a:before,
	#page_menu li a:after {
		content: "";
		position: absolute;
		left: 1.6em;
		top: 0.4em;
		width: 1em;
		height: 1em;
		font-size: 1.2em;
		font-family: 'Fontcons';
		-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
		filter: alpha(opacity=100);
		opacity: 1;
		background: none;
		speak: none;
		font-style: normal;
		font-weight: normal;
	}
	#page_menu li a:before {
		content: attr(data-icon);
	}
	#page_menu li a:hover {
		border-bottom: none;
		color: #444;
	}
	#page_menu li a:hover:before {
		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
		filter: alpha(opacity=100);
		opacity: 1;
	}
	#page_menu li.active {
		color: #eee;
		font-weight: 500;
	}
	#page_menu li.active>a {
		color: #eee;
		background: #555;
		background: rgba(0, 0, 0, 0.6);
	}
	#page_menu li.active>a:before {
		color: #FFF;
	}
	#page_menu li.active>a:hover {
		border: none;
	}
	#page_menu li.active:after {
		content: "";
		position: absolute;
		top: 0px;
		right: -0.9em;
		z-index: 444;
		border-top: 1.175em solid transparent;
		border-right: none;
		border-bottom: 1.175em solid transparent;
		border-left: 1em solid #555;
	}
	#page_menu li .meta {
		position: absolute;
		right: 0.5em;
		top: 0.4em;
		padding: 0;
	}
	#page_menu li .meta .count {
		background: #d1d1d1;
		background: rgba(0, 0, 0, 0.1);
		color: #888;
		text-shadow: 0 1px 1px #fff;
		font-size: 0.9em;
		line-height: 1.2;
		padding: 0.2em 0.4em;
		border-radius: 0.25em;
	}
	#page_menu li.active .meta .count {
		background: #aaa; 
		color: #555;
	}
	#page_menu li .alrt,
	#page_menu li .alrt:hover {
		position: absolute;
		top: 50%;
		left: -15px;
		margin-top: -4px;
		border: 1px solid #a62525;
		-webkit-box-shadow: 0 0 2px #aaa, inset 0 1px 2px #f47575;
		   -moz-box-shadow: 0 0 2px #aaa, inset 0 1px 2px #f47575;
		    -ms-box-shadow: 0 0 2px #aaa, inset 0 1px 2px #f47575;
		     -o-box-shadow: 0 0 2px #aaa, inset 0 1px 2px #f47575;
		        box-shadow: 0 0 2px #aaa, inset 0 1px 2px #f47575;
		-webkit-border-radius: 50%;
		   -moz-border-radius: 50%;
		    -ms-border-radius: 50%;
		     -o-border-radius: 50%;
		        border-radius: 50%;
		background: #ec1b1c;
		background-image: -webkit-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -moz-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -o-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -ms-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: linear-gradient(top, #ec1b1c, #bc2525);
		padding: 0;
		height: 6px;
		width: 6px;
		color: #fff;
		font-size: 11px;  
		font-weight: normal;
		line-height: 13px;
		z-index: 911;
	}
	#page_menu li.active .alrt,
	#page_menu li.active .alrt:hover {
		border: 1px solid #FFF;
		-webkit-box-shadow: 0 0 2px #666, inset 0 1px 2px #f47575;
		   -moz-box-shadow: 0 0 2px #666, inset 0 1px 2px #f47575;
		    -ms-box-shadow: 0 0 2px #666, inset 0 1px 2px #f47575;
		     -o-box-shadow: 0 0 2px #666, inset 0 1px 2px #f47575;
		        box-shadow: 0 0 2px #666, inset 0 1px 2px #f47575;
	}
	#page_menu li .alrt:before {
		display: none;
	}
	#page_menu li .alrt span {
		position: relative;
		display: block;
		top: 15px;
		left: -9999px;
		min-width: 140px;
		max-width: 180px;
		padding: 5px 10px;
		border: 1px solid #a62525;
		-webkit-box-shadow: 0 0 3px #777;
		   -moz-box-shadow: 0 0 3px #777;
		    -ms-box-shadow: 0 0 3px #777;
		     -o-box-shadow: 0 0 3px #777;
		        box-shadow: 0 0 3px #777;
		color: #777;
		-webkit-border-radius: 0.25em;
		   -moz-border-radius: 0.25em;
		    -ms-border-radius: 0.25em;
		     -o-border-radius: 0.25em;
		        border-radius: 0.25em;
		background: #FFF;
	}
	#page_menu li .alrt span:before {
		content: "";
		position: absolute;
		top: -12px;
		left: 5px;
		border: 6px solid transparent;
		border-color: transparent transparent #777 transparent;
	}
	#page_menu li .alrt span:after {
		content: "";
		position: absolute;
		top: -11px;
		left: 5px;
		border: 6px solid transparent;
		border-color: transparent transparent #ec1b1c transparent;
	}
	#page_menu li .alrt:hover span {
		left: -9px;
	}
	#page_menu li .alrt span strong {
		display: block;
		background: #ec1b1c;
		background-image: -webkit-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -moz-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -o-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: -ms-linear-gradient(top, #ec1b1c, #bc2525);
		background-image: linear-gradient(top, #ec1b1c, #bc2525);
		position: relative;
		padding: 5px 10px;
		margin: -5px -10px 5px -10px;
		color: #000;
		font-weight: bold;
		font-size: 1em;
		letter-spacing: 0.1em;
		text-shadow: 0px 1px 1px #eb5f60;
		border-bottom: 1px solid #a62525;
	}

	/* Sub-menus */
	#page_menu li ul {
		list-style: none;
		margin: 0 0 0 30px;
		position: relative;
	}
	#page_menu li ul:after {
		content: "";
		width: 1px;
		background: #eee;
		background: rgba(255, 255, 255, 0.6);
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
	}
	#page_menu li ul li {
		margin: 0;
		padding: 0;
		border: none;
	}
	#page_menu li ul li a {
		padding-left: 1em;
	}

	#page_menu li.option-select {
		padding: 0.4em 2em;
	}
	#page_menu.js li {
		display: none;
	}
	#page_menu.js li.option-select,
	#page_menu.js li.option-select select {
		display: block;
	}
	#page_menu.js li.option-select select {
		width: 100%;
	}

/* Member options */
	#member_options {
		list-style: none;
		margin: 1em 2em 0 2em;
		padding: 0;
		position: relative;
	}
/* ... */

